Add script.js to index.html

--- a/index.html
+++ b/index.html
@@ -291,6 +291,7 @@
         </section>
 
     </main>
+    <script src="script.js"></script>
 
     <script>
         // --- GLOBAL VARIABLES & INIT ---
