--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>CivilPro - Aplikasi Sipil Terpadu</title>
+    <title>Alister Engineering - Aplikasi Sipil Terpadu</title>
     <!-- Tailwind CSS -->
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <!-- Fonts -->
@@ -44,7 +44,7 @@
             <div class="flex items-center gap-2">
                 <div class="bg-blue-600 text-white p-2 rounded-lg font-bold">CP</div>
                 <div>
-                    <h1 class="text-lg font-bold text-slate-800 leading-none">CivilPro</h1>
+                    <h1 class="text-lg font-bold text-slate-800 leading-none">Alister Engineering</h1>
                     <span class="text-xs text-slate-500">Aplikasi Sipil Terpadu</span>
                 </div>
             </div>
