--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
     <header class="bg-white shadow-md sticky top-0 z-40 no-print">
         <div class="max-w-7xl mx-auto px-4 py-3 flex justify-between items-center">
             <div class="flex items-center gap-2">
-                <div class="bg-blue-600 text-white p-2 rounded-lg font-bold">CP</div>
+<img src="logo.png" alt="Logo CivilPro" class="h-10 w-10 rounded-lg object-contain">
+              
                 <div>
                     <h1 class="text-lg font-bold text-slate-800 leading-none">Alister Engineering</h1>
                     <span class="text-xs text-slate-500">Aplikasi Sipil Terpadu</span>
