--- a/index.html
+++ b/index.html
@@ -64,10 +64,8 @@
             <div class="flex items-center gap-3">
                 <!-- Logo Image Placeholder (Pastikan file icon-192.png ada) -->
                 <!-- Jika menggunakan gambar: <img src="icon-192.png" ... -->
-<img src="logo.png" alt="Logo CivilPro" class="h-10 w-10 rounded-lg object-contain">
-                <div class="w-10 h-10 bg-gradient-to-br from-slate-700 to-slate-900 rounded-lg flex items-center justify-center text-white shadow-inner border border-slate-600">
-                    <span class="font-bold text-lg">AE</span>
-                </div>
+<img src="icon-192.png" alt="Logo CivilPro" class="h-10 w-10 rounded-lg object-contain">
+              
                 <div>
                     <div class="flex items-center gap-2">
                         <h1 class="text-lg md:text-xl font-bold text-white tracking-tight leading-none">Alister Engineering</h1>
