--- a/index.html
+++ b/index.html
@@ -346,6 +346,15 @@
                 </div>
             </div>
         </section>
+            <div id="blog-loading" class="blog-loading hidden">
+                <div class="spinner"></div>
+                <p>Memuat artikel terbaru...</p>
+
+            </div>
+            <div id="blog-container" class="blog-grid"></div>
+            <div id="blog-error" class="blog-error hidden">
+                <p>Gagal memuat artikel. Periksa koneksi internet Anda.</p>
+            </div>
 
     </main>
 
