--- a/index.html
+++ b/index.html
@@ -347,14 +347,60 @@
             </div>
         </section>
             <div id="blog-loading" class="blog-loading hidden">
-                <div class="spinner"></div>
-                <p>Memuat artikel terbaru...</p>
+    <div class="spinner"></div>
+    <p>Memuat artikel terbaru...</p>
+</div>
+<div id="blog-container" class="blog-grid"></div>
+<div id="blog-error" class="blog-error hidden">
+    <p>Gagal memuat artikel. Periksa koneksi internet Anda.</p>
+</div>
 
-            </div>
-            <div id="blog-container" class="blog-grid"></div>
-            <div id="blog-error" class="blog-error hidden">
-                <p>Gagal memuat artikel. Periksa koneksi internet Anda.</p>
-            </div>
+<!-- SCRIPT UNTUK MEMUAT ARTIKEL BLOG -->
+<script>
+const blogUrl = 'https://alister10.blogspot.com/feeds/posts/default?alt=json';
+
+async function loadBlogPosts() {
+    const loading = document.getElementById('blog-loading');
+    const container = document.getElementById('blog-container');
+    const error = document.getElementById('blog-error');
+
+    loading.classList.remove('hidden');
+    container.innerHTML = '';
+    error.classList.add('hidden');
+
+    try {
+        const response = await fetch(blogUrl);
+        const data = await response.json();
+        const posts = data.feed.entry || [];
+
+        if (posts.length === 0) {
+            container.innerHTML = '<p>Tidak ada artikel.</p>';
+        } else {
+            posts.forEach(post => {
+                const title = post.title.$t;
+                const link = post.link.find(l => l.rel === 'alternate').href;
+                const content = post.content ? post.content.$t : '';
+
+                const article = document.createElement('div');
+                article.className = 'blog-post';
+                article.innerHTML = `
+                    <h2><a href="${link}" target="_blank">${title}</a></h2>
+                    <div>${content.substring(0, 200)}...</div>
+                `;
+                container.appendChild(article);
+            });
+        }
+
+    } catch (e) {
+        console.error(e);
+        error.classList.remove('hidden');
+    } finally {
+        loading.classList.add('hidden');
+    }
+}
+
+window.addEventListener('DOMContentLoaded', loadBlogPosts);
+</script>
 
     </main>
 
